--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -938,6 +938,10 @@ div:nth-of-type(2) > .list > .roomState .star {
   justify-content: center;
 }
 
+#stateSaveOverlay .titleWithCloseButton {
+  max-width: 640px;
+}
+
 #stateSaveOverlay h1 {
   margin-top: 0;
 }
@@ -968,9 +972,13 @@ div:nth-of-type(2) > .list > .roomState .star {
   #stateSaveOverlay {
     padding: 0;
   }
-  #stateSaveOverlay > h1 {
+  #stateSaveOverlay h1 {
     text-align: left;
     margin: 10px 50px 10px 5px;
+  }
+  #stateSaveOverlay .titleWithCloseButton button {
+    right: 10px;
+    top: 10px;
   }
   #stateSaveOverlay > div > div {
     padding: 5px;
