--- a/client/css/widgets/scoreboard.css
+++ b/client/css/widgets/scoreboard.css
@@ -3,15 +3,13 @@
   background: white;
   border-width: 0px;
   border-radius: 8px;
-  outline: none;
-  box-shadow: 0 0 0 2pt black;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .scoreboard table {
-  border-width: 0px;
+  border: 2px solid black;
   border-radius: 8px;
   border-collapse: separate;
   border-spacing: 0;
