Move table height computation into CSS.

--- a/client/css/widgets/scoreboard.css
+++ b/client/css/widgets/scoreboard.css
@@ -16,6 +16,8 @@
   display: block;
   overflow-x: auto;
   overflow-y: auto;
+  height: 100%;
+  width: 100%;
 }
 
 .scoreboard .firstRow.firstCol {
