--- a/client/css/widgets/scoreboard.css
+++ b/client/css/widgets/scoreboard.css
@@ -20,26 +20,26 @@
   width: 100%;
 }
 
-.scoreboard .firstRow.firstCol {
+.scoreboard table tbody tr:nth-child(1) td:nth-child(1) {
   z-index: 2;
 }
 
-.scoreboard .firstRow {
+.scoreboard table tbody tr:nth-child(1) td {
   position: sticky;
   z-index: 1;
   top: 0;
   background-color: #ddd;
 }
 
-.scoreboard .firstCol {
+.scoreboard table tbody tr td:nth-child(1) {
   position: sticky;
+  z-index: 1;
   left: 0;
   background-color: #ddd;
-  z-index: 1;
 }
 
 .scoreboard .currentRound {
-  background-color: #FDF5E6;
+  background-color: #fdf5e6;
 }
 
 .scoreboard tbody td {
