changed the priority of the sort dropdown and its color to green

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -69,6 +69,13 @@
   margin: 0 5px;
 }
 
+#librarySortWrapper i {
+  color: green;
+}
+#librarySortWrapper select {
+  border-color: green;
+}
+
 #filterOverflow.empty, #filterOverflow:not(.active) > div {
   display: none;
 }
