--- a/client/css/widgets/scoreboard.css
+++ b/client/css/widgets/scoreboard.css
@@ -20,28 +20,6 @@
   width: 100%;
 }
 
-.scoreboard table tbody tr:nth-child(1) td:nth-child(1) {
-  z-index: 2;
-}
-
-.scoreboard table tbody tr:nth-child(1) td {
-  position: sticky;
-  z-index: 1;
-  top: 0;
-  background-color: #ddd;
-}
-
-.scoreboard table tbody tr td:nth-child(1) {
-  position: sticky;
-  z-index: 1;
-  left: 0;
-  background-color: #ddd;
-}
-
-.scoreboard .currentRound {
-  background-color: #fdf5e6;
-}
-
 .scoreboard tbody td {
   border-bottom: 1px solid #ddd;
   border-right: 1px solid #ddd;
@@ -50,6 +28,28 @@
   text-align: right;
   white-space: nowrap;
   background-color: #f8f8f8;
+}
+
+.scoreboard tbody tr:nth-child(1) td:nth-child(1) {
+  z-index: 2;
+}
+
+.scoreboard tbody tr:nth-child(1) td {
+  position: sticky;
+  z-index: 1;
+  top: 0;
+  background-color: #ddd;
+}
+
+.scoreboard tbody tr td:nth-child(1) {
+  position: sticky;
+  z-index: 1;
+  left: 0;
+  background-color: #ddd;
+}
+
+.scoreboard .currentRound {
+  background-color: #fdf5e6;
 }
 
 .scoreboard .totalsLine {
