--- a/client/css/widgets/scoreboard.css
+++ b/client/css/widgets/scoreboard.css
@@ -1,23 +1,20 @@
 .scoreboard {
-  box-sizing: border-box;
-  background: white;
-  border-width: 0px;
-  border-radius: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    border: 2px solid black;
+    box-sizing: border-box;
+    background: #fff;
+    border-width: 2px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
 }
 
 .scoreboard table {
-  border: 2px solid black;
-  border-radius: 8px;
-  border-collapse: separate;
-  border-spacing: 0;
-  display: block;
-  overflow-x: auto;
-  overflow-y: auto;
-  height: 100%;
-  width: 100%;
+    border-collapse: separate;
+    border-spacing: 0;
+    height: 100%;
+    width: 100%;
 }
 
 .scoreboard tbody td {
