fixed margin for in-progress games with hideName

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -285,6 +285,9 @@ div:nth-of-type(2) > .list > .roomState .star {
 .roomState.hideName.savedGame .details h3 {
   display: none;
 }
+.roomState.hideName.savedGame .details h4 {
+  margin: 8px;
+}
 
 .roomState.noImage img {
   display: none;
