--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -529,6 +529,16 @@ div:nth-of-type(2) > .list > .roomState .star {
 #similarDetails a {
   color: var(--overlayFontColor);
 }
+#stateDetailsOverlay.notEditing #similarDetails.noImage {
+  padding-left: 20px;
+}
+#stateDetailsOverlay.notEditing #similarDetails.noImage #similarImage {
+  display: none;
+}
+#stateDetailsOverlay.notEditing #similarDetails.noImage .details {
+  margin-left: 0;
+  padding-left: 0;
+}
 
 #prevState, #nextState {
   --size: var(--arrowButtonsSize);
@@ -848,6 +858,9 @@ div:nth-of-type(2) > .list > .roomState .star {
   .variant > .variantEdit {
     flex-direction: column;
     align-items: flex-start;
+  }
+  #stateDetailsOverlay.notEditing #similarDetails.noImage {
+    padding-left: 10px;
   }
   #helpTexts {
     padding: 0 10px 10px 10px;
