used a different tag for embedding icons - hopefully fixes them in Chrome

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -816,6 +816,7 @@ button[icon].green:hover {
   font-size: 18px;
   position: relative;
   line-height: 10px;
+  font-style: normal;
 }
 .richtextSymbol.symbols {
   top: 2px;
