made intermediate div its own stacking context

--- a/client/css/widgets/scoreboard.css
+++ b/client/css/widgets/scoreboard.css
@@ -1,4 +1,6 @@
 .scoreboard > div.scoreboardIntermediate {
+  position: relative;
+  z-index: 0;
   border: 2px solid black;
   box-sizing: border-box;
   background: #fff;
