--- a/client/css/widgets/basicwidget.css
+++ b/client/css/widgets/basicwidget.css
@@ -9,7 +9,8 @@ body.edit .widget.basic.hasImage {
   opacity: 0.45;
 }
 
-.shadow {
+.dragging-shadow {
   filter: brightness(0);
   opacity: 0.3;
+  pointer-events: none;
 }
