Change to add regular seat and seat with counter option

--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -37,6 +37,9 @@
 #addSeat::before{
   content:'[chair]';
 }
+#addSeatCounter::before{
+  content:'[chair]';
+}
 #addHand::before{
   content:'[holder_hand]';
 }
