Add scoreboard icon to Add Widget menu

--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -37,6 +37,9 @@
 #addSeat::before{
   content:'[chair]';
 }
+#addScoreboard::before{
+  content:'[scoreboard]';
+}
 #addHand::before{
   content:'[holder_hand]';
 }
