--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -1,17 +1,21 @@
 #addOverlay {
+  display:grid;
+  grid-template-columns: 19.7% 58.5% 19.7%;
+  grid-template-rows: 1fr 1fr;
+  gap: 10px;
+  justify-content: space-around;
   width: var(--roomWidth);
   height: var(--roomHeight);
   transform: scale(var(--scale));
   transform-origin: left top;
-  flex-direction: row;
   padding: 0;
+  overflow:hidden;
 }
 
 #addOverlay > .category {
   background: var(--roomColor);
   width: 100%;
   border-radius: 32px;
-  margin: 20px;
   text-align: center;
 }
 
@@ -25,6 +29,32 @@
   margin-right: auto;
   margin-bottom: 8px;
 }
+
+#addOverlay >.category.cards {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 2;
+}
+
+#addOverlay >.category.pieces {
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
+}
+
+#addOverlay >.category.interactive {
+  grid-column: 2 / span 1;
+  grid-row: 2 / span 1;
+}
+
+#addOverlay >.category.decorative {
+  grid-column: 3 / span 1;
+  grid-row: 1 / span 1;
+}
+
+#addOverlay >.category.custom {
+  grid-column: 3 / span 1;
+  grid-row: 2 / span 1;
+}
+
 #uploadBoard::before, #uploadToken::before{
   content:'[upload]';
 }
