--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -1,5 +1,5 @@
 #addOverlay {
-  display:grid;
+  display:none;
   grid-template-columns: 19.7% 58.5% 19.7%;
   grid-template-rows: 1fr 1fr;
   gap: 10px;
