--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -1,58 +1,58 @@
+
 #addOverlay {
-  display:none;
-  grid-template-columns: 19.7% 58.5% 19.7%;
-  grid-template-rows: 1fr 1fr;
-  gap: 10px;
-  justify-content: space-around;
   width: var(--roomWidth);
   height: var(--roomHeight);
   transform: scale(var(--scale));
   transform-origin: left top;
   padding: 0;
-  overflow:hidden;
 }
 
-#addOverlay > .category {
+#gridContainerAddOverlay {
+  display: grid !important;
+  grid-template-areas: "a b b b c"
+  "a d d d e";
+  height:100%;
+  margin: 20px;
+  gap: 20px 20px;
+}
+
+#gridContainerAddOverlay > .category {
   background: var(--roomColor);
   width: 100%;
+  height: 100%;
   border-radius: 32px;
   text-align: center;
 }
 
-#addOverlay > .category > h2 {
+#gridContainerAddOverlay > .category > h2 {
   color: black;
 }
 
-#addOverlay > .category > button {
+#gridContainerAddOverlay > .category > button {
   display: flex;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 8px;
 }
 
-#addOverlay >.category.cards {
-  grid-column: 1 / span 1;
-  grid-row: 1 / span 2;
+#gridContainerAddOverlay >.category.cards {
+  grid-area: a;
 }
 
-#addOverlay >.category.pieces {
-  grid-column: 2 / span 1;
-  grid-row: 1 / span 1;
+#gridContainerAddOverlay >.category.pieces {
+  grid-area: b;
 }
 
-#addOverlay >.category.interactive {
-  grid-column: 2 / span 1;
-  grid-row: 2 / span 1;
+#gridContainerAddOverlay >.category.interactive {
+  grid-area: d;
 }
 
-#addOverlay >.category.decorative {
-  grid-column: 3 / span 1;
-  grid-row: 1 / span 1;
+gridContainerAddOverlay >.category.decorative {
+  grid-area: c;
 }
 
-#addOverlay >.category.custom {
-  grid-column: 3 / span 1;
-  grid-row: 2 / span 1;
+#gridContainerAddOverlay >.category.custom {
+  grid-area: e;
 }
 
 #uploadBoard::before, #uploadToken::before{
