--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -9,8 +9,11 @@
 
 #gridContainerAddOverlay {
   display: grid !important;
-  grid-template-areas: "a b b b c"
-  "a d d d e";
+  grid-template-areas:         "cards pieces decorative"
+                               "cards pieces decorative"
+                               "cards interactive custom";
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   height:100%;
   margin: 20px;
   gap: 20px 20px;
@@ -36,23 +39,23 @@
 }
 
 #gridContainerAddOverlay >.category.cards {
-  grid-area: a;
+  grid-area: cards;
 }
 
 #gridContainerAddOverlay >.category.pieces {
-  grid-area: b;
+  grid-area: pieces;
 }
 
 #gridContainerAddOverlay >.category.interactive {
-  grid-area: d;
+  grid-area: interactive;
 }
 
-gridContainerAddOverlay >.category.decorative {
-  grid-area: c;
+#gridContainerAddOverlay >.category.decorative {
+  grid-area: decorative;
 }
 
 #gridContainerAddOverlay >.category.custom {
-  grid-area: e;
+  grid-area: custom;
 }
 
 #uploadBoard::before, #uploadToken::before{
