Modify css for spacers; two rows for interactive buttons.

--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -38,6 +38,10 @@
   margin-bottom: 8px;
 }
 
+#gridContainerAddOverlay > .category > div > button {
+  margin-bottom: 8px;
+}
+
 #gridContainerAddOverlay >.category.cards {
   grid-area: cards;
 }
