A few minor scoreboard updates/fixes (#1505)
* Set text of Totals from a property.

* Move Add Scoreboard to Interactive column.

* Add scoreboard icon to Add Widget menu

* Add scoreboard to TestCafe basic test game

* Fix TestCafe button problem

* Fix missing scoreboard tutorial library image

* Update hash

* Fix scoreboard tutorial image again

* Hide showName for scoreboard tutorial

* Fix missing button in TestCafe

* Update hash

* Missing bracket

Co-authored-by: 96LawDawg <76912527+96LawDawg@users.noreply.github.com>

--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -40,6 +40,9 @@
 #addSeatCounter::before{
   content:'[chair]';
 }
+#addScoreboard::before{
+  content:'[scoreboard]';
+}
 #addHand::before{
   content:'[holder_hand]';
 }
