--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -1,64 +1,51 @@
-
 #addOverlay {
   width: var(--roomWidth);
   height: var(--roomHeight);
   transform: scale(var(--scale));
   transform-origin: left top;
-  padding: 0;
-}
-
-#gridContainerAddOverlay {
-  display: grid !important;
+  display: none;
   grid-template-areas:         "cards pieces decorative"
                                "cards pieces decorative"
                                "cards interactive custom";
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  height:100%;
-  margin: 20px;
-  gap: 20px 20px;
+  padding: 20px;
+  gap: 20px;
 }
 
-#gridContainerAddOverlay > .category {
+#addOverlay > .category {
   background: var(--roomColor);
-  width: 100%;
-  height: 100%;
   border-radius: 32px;
   text-align: center;
 }
 
-#gridContainerAddOverlay > .category > h2 {
+#addOverlay > .category > h2 {
   color: black;
 }
 
-#gridContainerAddOverlay > .category > button {
+#addOverlay > .category > button {
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 8px;
 }
 
-#gridContainerAddOverlay > .category > div > button {
-  margin-bottom: 8px;
-}
-
-#gridContainerAddOverlay >.category.cards {
+#addOverlay >.category.cards {
   grid-area: cards;
 }
 
-#gridContainerAddOverlay >.category.pieces {
+#addOverlay >.category.pieces {
   grid-area: pieces;
 }
 
-#gridContainerAddOverlay >.category.interactive {
+#addOverlay >.category.interactive {
   grid-area: interactive;
 }
 
-#gridContainerAddOverlay >.category.decorative {
+#addOverlay >.category.decorative {
   grid-area: decorative;
 }
 
-#gridContainerAddOverlay >.category.custom {
+#addOverlay >.category.custom {
   grid-area: custom;
 }
 
