Change layout of add widget screen. (#1506)
* Change layout of add widget screen.

* Added popup for spinner values selection.

* Add color dialogs for choosing pieces.

* Modify handling of grid to emulate #1237.

* Add dialog headings, change defaults.

* add game pieces assets

* adds game pieces

not in the correct place!!

* Revert "adds game pieces"

This reverts commit 55fed1a2d052c5e7dc26454e68c1b5a8be291121.

* adds game pieces.

not in the correct place

* Lay out new icons.

* Modify css for spacers; two rows for interactive buttons.

* Remove extra div in addOverlay.

* Add stacks of poker chips

Changed class of poker chips to "pokerChip[3D]" to avoid conflict with existing checkers.

* changes pile json for 2d chips

* little space for buttons

* changes buttons layout

* spread out game pieces

* testcafe: editor.js changes for new layout.

* Fix test and hash

* Add dropTarget for 3-D poker chip holder

* Fix dropOffsetY so works with both types

* Add recall and sort button to poker chips

* Fix hash

* Replace add Overlay display hack by a cleaner hack

Co-authored-by: RaphaelAlvez <73476656+RaphaelAlvez@users.noreply.github.com>
Co-authored-by: 96LawDawg <76912527+96LawDawg@users.noreply.github.com>

--- a/client/css/editmode.css
+++ b/client/css/editmode.css
@@ -3,15 +3,19 @@
   height: var(--roomHeight);
   transform: scale(var(--scale));
   transform-origin: left top;
-  flex-direction: row;
-  padding: 0;
+  display: none;
+  grid-template-areas:         "cards pieces decorative"
+                               "cards pieces decorative"
+                               "cards interactive custom";
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  padding: 20px;
+  gap: 20px;
 }
 
 #addOverlay > .category {
   background: var(--roomColor);
-  width: 100%;
   border-radius: 32px;
-  margin: 20px;
   text-align: center;
 }
 
@@ -23,8 +27,28 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 8px;
 }
+
+#addOverlay >.category.cards {
+  grid-area: cards;
+}
+
+#addOverlay >.category.pieces {
+  grid-area: pieces;
+}
+
+#addOverlay >.category.interactive {
+  grid-area: interactive;
+}
+
+#addOverlay >.category.decorative {
+  grid-area: decorative;
+}
+
+#addOverlay >.category.custom {
+  grid-area: custom;
+}
+
 #uploadBoard::before, #uploadToken::before{
   content:'[upload]';
 }
