--- a/client/css/widgets/deck.css
+++ b/client/css/widgets/deck.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-body.edit .deck {
+body.hitTest .deck, body.edit .deck {
   display: block;
   padding-top: 40px;
   text-align: center;
