--- a/client/css/widgets/deck.css
+++ b/client/css/widgets/deck.css
@@ -13,7 +13,7 @@ body.edit .deck {
   font-size: 200%;
 }
 
-body.jsonEdit:not(.hitTest) .deck {
+body.jsonEdit:not(.hitTest):not(.edit) .deck {
   visibility: hidden;
   pointer-events: none;
 }
