Use document.elementsFromPoint for JSON editor targets. (#1571)
Using elementsFromPoint for the JSON editor takes into account
transforms, clip paths and z ordering implicitly. Fixes #1567.

Co-authored-by: David Robarts <368796+robartsd@users.noreply.github.com>
Co-authored-by: 96LawDawg <76912527+96LawDawg@users.noreply.github.com>

--- a/client/css/widgets/deck.css
+++ b/client/css/widgets/deck.css
@@ -2,12 +2,20 @@
   display: none;
 }
 
-body.edit .deck {
+body.jsonEdit .deck, body.edit .deck {
   display: block;
+}
+
+body.edit .deck {
   padding-top: 40px;
   text-align: center;
 
   font-size: 200%;
+}
+
+body.jsonEdit:not(.hitTest, .edit) .deck {
+  visibility: hidden;
+  pointer-events: none;
 }
 
 body.edit .deck::before, body.edit .deck::after {
