--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -658,8 +658,18 @@ div[icon] .buttons {
   -moz-user-select: none;
 }
 
-.widget.foreign {
+body:not(.jsonEdit) .widget.foreign {
   display: none !important;
+}
+
+body.jsonEdit:not(.hitTest) .widget.foreign {
+  /* Edit mode uses elementsFromPoint to determine widgets under the cursor, so
+     we hide and pass pointer events through the element but don't use display: none here
+     to prevent invalidating all layout every time the mouse moves. When hit testing
+     the foreign layers are temporarily visible (but the class is removed before a frame
+     is presented to the user). */
+  visibility: hidden;
+  pointer-events: none;
 }
 
 #clientPointer {
