--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -34,6 +34,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+body.loadingEditMode * {
+  cursor: wait;
+}
+
 #roomArea {
   position: fixed;
   overflow: clip;
