--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -1378,11 +1378,11 @@ input:invalid+span:after {
   display: inline-block;
   border-radius: 5px;
   position: relative;
-  border: 2px solid var(--roomColor);
+  border: 3px solid var(--roomColor);
   overflow: hidden;
 }
 .inputpalette > div input[type="radio"]:checked+label{
-  border: 2px solid var(--VTTblue);
+  border: 3px solid var(--VTTblue);
 }
 .inputpalette > div input[type="radio"]:checked+label::after{
   font-family: 'Material Icons';
@@ -1398,18 +1398,18 @@ input:invalid+span:after {
   position: absolute;
   top: -3px;
   right: -3px;
-  border: 2px solid var(--roomColor);
+  border: 2px solid white;
 }
 .inputpalette > div label::before{
+  display: block;
   content: '';
   position: absolute;
-  
-  top: -1px;
-  right: -1px;
-  bottom: -1px;
-  left: -1px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
   position: absolute;
-  border-radius: 5px;
-  border: 3px solid white;
+  border-radius: 2px;
+  border: 2px solid white;
   overflow: hidden;
 }
