hide logo and text in background

--- a/client/css/editor/layout.css
+++ b/client/css/editor/layout.css
@@ -2,3 +2,10 @@ body:not(.edit) #editor,
 body.edit #toolbar {
   display: none;
 }
+
+body.edit {
+  background-image: none;
+}
+body.edit::after {
+  display: none;
+}
