fixed room position and size

--- a/client/css/editor/layout.css
+++ b/client/css/editor/layout.css
@@ -9,3 +9,8 @@ body.edit {
 body.edit::after {
   display: none;
 }
+
+body.edit {
+  --roomTop: var(--editModeRoomTop);
+  --roomLeft: var(--editModeRoomLeft);
+}
